implemented users layout

--- a/index.html
+++ b/index.html
@@ -14,6 +14,182 @@
     <div class="button view"><i class="fa-solid fa-users-viewfinder"></i> Speaker View</div>
     <div class="button zoom-out"><i class="fa-solid fa-expand"></i></div>
   </section>
-  
+  <main class="container">
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+    <div class="user">
+      <img src="https://picsum.photos/240/140" alt="user">
+      <div class="user-name"><i class="fa-solid fa-microphone-slash"></i> Ric Tieri
+      </div>
+    </div>
+  </main>
 </body>
 </html>
