implementing control button

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
   <section class="topbar">
-    <div class="button view"><i class="fa-solid fa-users-viewfinder"></i> Speaker View</div>
-    <div class="button zoom-out"><i class="fa-solid fa-expand"></i></div>
+    <div class="button-top view"><i class="fa-solid fa-users-viewfinder"></i> Speaker View</div>
+    <div class="button-top zoom-out"><i class="fa-solid fa-expand"></i></div>
   </section>
   <main class="container">
     <div class="user">
@@ -191,5 +191,33 @@
       </div>
     </div>
   </main>
+  <header class="interaction">
+    <div class="user-control-button">
+      <div class="button">
+        <i class="fa-solid fa-microphone"></i>
+        <span>Mute</span>
+      </div>
+      <div class="menu"><i class="fa-solid fa-angle-up"></i></div>
+      <div class="button">
+        <i class="fa-solid fa-video"></i>
+        <p>Stop Video</p>
+      </div>
+      <div class="menu"><i class="fa-solid fa-angle-up"></i></div>
+    </div>
+    <div class="meet-control-button">
+      <div class="button">
+        <i class="fa-solid fa-microphone"></i>
+        <span>Mute</span>
+      </div>
+      <div class="menu"><i class="fa-solid fa-angle-up"></i></div>
+      <div class="button">
+        <i class="fa-solid fa-video"></i>
+        <p>Stop Video</p>
+      </div>
+      <div class="menu"><i class="fa-solid fa-angle-up"></i></div>
+      
+    </div>
+    <div class="meet-exit-button"></div>
+  </header>
 </body>
 </html>
