--- a/index.html
+++ b/index.html
@@ -206,18 +206,42 @@
     </div>
     <div class="meet-control-button">
       <div class="button">
-        <i class="fa-solid fa-microphone"></i>
-        <span>Mute</span>
+        <i class="fa-solid fa-user-plus"></i>
+        <span>Invite</span>
+      </div>
+      <div class="button">
+        <i class="fa-solid fa-user-group"></i>
+        <p>Manage Partecipants</p>
+      </div>
+      <div class="button">
+        <i class="fa-solid fa-chart-column"></i>
+        <span>Polling</span>
+      </div>
+      <div class="button button-green">
+        <i class="fa-solid fa-share-from-square"></i>
+        <p>Share screen</p>
       </div>
       <div class="menu"><i class="fa-solid fa-angle-up"></i></div>
       <div class="button">
-        <i class="fa-solid fa-video"></i>
-        <p>Stop Video</p>
+        <i class="fa-solid fa-comment"></i>
+        <span>Chat</span>
       </div>
-      <div class="menu"><i class="fa-solid fa-angle-up"></i></div>
-      
+      <div class="button">
+        <i class="fa-solid fa-record-vinyl"></i>
+        <p>Record</p>
+      </div>
+      <div class="button">
+        <i class="fa-solid fa-table-cells-large"></i>
+        <span>Breakout Rooms</span>
+      </div>
+      <div class="button">
+        <i class="fa-solid fa-ellipsis"></i>
+        <p>More</p>
+      </div>
     </div>
-    <div class="meet-exit-button"></div>
+    <div class="meet-exit-button">
+      End meeting
+    </div>
   </header>
 </body>
 </html>
